<resources>
    <string name="app_name">AndroidDemo</string>

    <!-- Menu -->
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>

    <!-- Button -->
    <string name="start_list_activity">ListActivity</string>
    <string name="start_pinned_activity">PinnedActivity</string>
    <string name="start_sticky_activity">StickyActivity</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="transition_book_img">transition_book_img</string>

    <string name="index">首页</string>
    <string name="account">账户</string>

    <string name="action_github">Github</string>
    <string name="action_filter">筛选</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>

    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>

</resources>
