<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_fastscroll"
        android:showAsAction="never"
        android:title="@string/action_fastscroll"
        android:checkable="true"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_addpadding"
        android:showAsAction="never"
        android:title="@string/action_addpadding"
        android:checkable="true"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_showShadow"
        android:showAsAction="never"
        android:title="@string/action_showShadow"
        android:checkable="true"
        tools:ignore="AppCompatResource" />
    
    <item
        android:id="@+id/action_showHeaderAndFooter"
        android:showAsAction="never"
        android:title="@string/action_showHeaderAndFooter"
        android:checkable="true"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_updateDataset"
        android:showAsAction="never"
        android:title="@string/action_updateDataset"
        tools:ignore="AppCompatResource" />

</menu>