<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_list_activity"
        android:id="@+id/btn_list_activity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_pinned_activity"
        android:id="@+id/btn_pinned_activity"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/btn_list_activity"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_sticky_activity"
        android:id="@+id/btn_sticky_activity"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/btn_pinned_activity"
        android:layout_centerHorizontal="true" />
</RelativeLayout>